--- a/index.html
+++ b/index.html
@@ -22,13 +22,35 @@
             <div class="main">
                 <p class="text-main">This website is awesome</p>
                 <div class="secondary">
-                    <p class="text-secondary">This website has some subtext that goes here under the main title. It's a smaller
-                    font and the color is lower contrast</p>
+                    <p class="text-secondary">This website has some subtext that goes here under the main title. It's a
+                        smaller
+                        font and the color is lower contrast</p>
                 </div>
                 <button class="button-1">Sign up</button>
             </div>
             <div class="img">
                 <p>this is a placeholder for an image</p>
+            </div>
+        </div>
+    </div>
+    <div class="information">
+        <p class="information-p">Some random information.</p>
+        <div class="container">
+            <div class="image-1">
+                <div class="image"></div>
+                <p class="descript">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="image-1">
+                <div class="image"></div>
+                <p class="descript">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="image-1">
+                <div class="image"></div>
+                <p class="descript">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="image-1">
+                <div class="image"></div>
+                <p class="descript">this is some subtext under an illustration or image</p>
             </div>
         </div>
     </div>
