--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
         </p>
         <p class="quote-p2">-Thor, God of Thunder</p>
     </div>
+    <div class="action">
+        <div class="action-p">
+            <p class="action-p1">Call to action! it's time!</p>
+            <p class="action-p2">Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button class="button-2">Sign up</button>
+    </div>
 </body>
 
 </html>
