add section footer

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
         </div>
         <button class="button-2">Sign up</button>
     </div>
+    <div class="footer">
+        <p class="footer-p">Copyright &copy The Odin Project 2024</p>
+    </div>
 </body>
 
 </html>
